# rust-telemetry-workshop

./: .gitignore  .wr.toml  Cargo.toml  README.md
.github/workflows/: site.yml
book/: book.toml
book/src/: SUMMARY.md
book/src/00_intro/: 00_welcome.md
book/src/01_structured_logging/: 00_intro.md  01_log_crate.md  02_log_levels.md  03_what_to_log.md  04_tracing.md  05_fields.md  06_instrument_macro.md  07_structured_output.md  08_opentelemetry.md  09_subscriber.md  10_span_lifecycle.md  11_thread_local_state.md  12_futures.md  13_futures_2.md  14_interop.md
book/src/02_failures/: 00_intro.md  01_error_trait.md  02_error_reporters.md  03_panics.md
book/src/03_metrics/: 00_intro.md  01_facade.md  02_describe.md  03_labels.md  04_prometheus.md  05_gauges.md  06_histogram.md  07_outro.md
exercises/00_intro/00_welcome/: Cargo.toml
exercises/00_intro/00_welcome/src/: lib.rs  main.rs
exercises/00_intro/00_welcome/welcome/src/: lib.rs
exercises/01_structured_logging/00_intro/: Cargo.toml
exercises/01_structured_logging/00_intro/src/: main.rs
exercises/01_structured_logging/01_log_crate/: Cargo.toml
exercises/01_structured_logging/01_log_crate/src/: lib.rs
exercises/01_structured_logging/01_log_crate/src/bins/: file.rs  stdout.rs
exercises/01_structured_logging/02_log_levels/: Cargo.toml
exercises/01_structured_logging/02_log_levels/src/: lib.rs  logger.rs
exercises/01_structured_logging/02_log_levels/src/bins/: min_level.rs  module.rs
exercises/01_structured_logging/03_what_to_log/: Cargo.toml
exercises/01_structured_logging/03_what_to_log/src/: lib.rs  logger.rs
exercises/01_structured_logging/03_what_to_log/tests/: failure.rs  success.rs
exercises/01_structured_logging/04_tracing/: Cargo.toml
exercises/01_structured_logging/04_tracing/src/: lib.rs
exercises/01_structured_logging/04_tracing/tests/: failure.rs  success.rs
exercises/01_structured_logging/05_fields/: Cargo.toml
exercises/01_structured_logging/05_fields/src/: lib.rs  subscriber.rs
exercises/01_structured_logging/05_fields/tests/: failure.rs  success.rs
exercises/01_structured_logging/06_instrument_macro/: Cargo.toml
exercises/01_structured_logging/06_instrument_macro/src/: lib.rs
exercises/01_structured_logging/06_instrument_macro/tests/: failure.rs  success.rs
exercises/01_structured_logging/07_structured_output/: Cargo.toml
exercises/01_structured_logging/07_structured_output/src/: lib.rs  subscriber.rs
exercises/01_structured_logging/07_structured_output/tests/: failure.rs  success.rs
exercises/01_structured_logging/08_opentelemetry/: Cargo.toml
exercises/01_structured_logging/08_opentelemetry/src/: lib.rs  subscriber.rs
exercises/01_structured_logging/08_opentelemetry/tests/: failure.rs  next.rs  success.rs
exercises/01_structured_logging/09_subscriber/: Cargo.toml
exercises/01_structured_logging/09_subscriber/src/: lib.rs  subscriber.rs
exercises/01_structured_logging/09_subscriber/tests/: failure.rs  success.rs
exercises/01_structured_logging/10_span_lifecycle/: Cargo.toml
exercises/01_structured_logging/10_span_lifecycle/src/: lib.rs  subscriber.rs
exercises/01_structured_logging/11_thread_local_state/: Cargo.toml
exercises/01_structured_logging/11_thread_local_state/src/: lib.rs  subscriber.rs
exercises/01_structured_logging/12_futures/: Cargo.toml
exercises/01_structured_logging/12_futures/src/: lib.rs
exercises/01_structured_logging/13_futures_2/: Cargo.toml
exercises/01_structured_logging/13_futures_2/src/: lib.rs  subscriber.rs
exercises/01_structured_logging/14_interop/: Cargo.toml
exercises/01_structured_logging/14_interop/src/: lib.rs  subscriber.rs
exercises/01_structured_logging/15_outro/src/: lib.rs
exercises/02_failures/00_intro/: Cargo.toml
exercises/02_failures/00_intro/src/: lib.rs
exercises/02_failures/01_error_trait/: Cargo.toml
exercises/02_failures/01_error_trait/src/: lib.rs  subscriber.rs
exercises/02_failures/02_error_reporters/: Cargo.toml
exercises/02_failures/02_error_reporters/src/: lib.rs
exercises/02_failures/03_panics/: Cargo.toml
exercises/02_failures/03_panics/src/: lib.rs  subscriber.rs
exercises/03_metrics/00_intro/: Cargo.toml
exercises/03_metrics/00_intro/src/: lib.rs
exercises/03_metrics/01_facade/: Cargo.toml
exercises/03_metrics/01_facade/src/: lib.rs
exercises/03_metrics/02_describe/: Cargo.toml
exercises/03_metrics/02_describe/src/: lib.rs
exercises/03_metrics/03_labels/: Cargo.toml
exercises/03_metrics/03_labels/src/: lib.rs
exercises/03_metrics/04_prometheus/: Cargo.toml
exercises/03_metrics/04_prometheus/src/: lib.rs
exercises/03_metrics/05_gauges/: Cargo.toml
exercises/03_metrics/05_gauges/src/: lib.rs
exercises/03_metrics/06_histogram/: Cargo.toml
exercises/03_metrics/06_histogram/src/: lib.rs
exercises/03_metrics/07_outro/: Cargo.toml
exercises/03_metrics/07_outro/src/: lib.rs
exercises/04_capstone/00_capstone/src/: lib.rs
helpers/: Cargo.toml
helpers/src/: lib.rs
koans/: Cargo.toml
koans/src/: main.rs
