[workspace]
members = [
  "exercises/*/*",
  "helpers",
]
resolver = "1"

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
fs-err = "2.9"
helpers = { path = "helpers" }
hyper = "1.4.1"
log = "0.4"
metrics = "0.23.0"
metrics-exporter-prometheus = "0.15.3"
metrics-util = "0.17.0"
opentelemetry = "0.24.0"
opentelemetry-otlp = "0.17.0"
opentelemetry_sdk = "0.24.1"
rustls = "0.23.12"
serde_json = "1"
tempfile = "3.8"
tokio = "1.32.0"
tonic = "0.12.1"
tracing = "0.1"
tracing-log = "0.2"
tracing-opentelemetry = "0.25.0"
tracing-panic = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
ureq = "2"
