[package]
name = "log_koan"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stdout"
path = "src/bins/stdout.rs"

[[bin]]
name = "file"
path = "src/bins/file.rs"

[dependencies]
log = { workspace = true, features = ["std"] }
fs-err = "2.9"

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile = { workspace = true }
