[package]
name = "opentelemetry_training"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json"] }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-otlp = { workspace = true, features = ["tls-roots"] }
tonic = { workspace = true }
hyper = { workspace = true, features = ["full"] }

[dev-dependencies]
tokio = { workspace = true }