[package]
name = "opentelemetry_training"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
hyper = { workspace = true, features = ["full"] }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["tls-roots"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
tonic = { workspace = true, features = ["tls-roots"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, default-features = true, features = ["fmt", "json"] }

[dev-dependencies]
tokio = { workspace = true }
