[package]
name = "lifecycle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
helpers = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, default-features = true, features = ["fmt", "json"] }

[dev-dependencies]
serde_json = { workspace = true }
