[package]
name = "fut_tracing_2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
helpers = { path = "../../../helpers" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
tokio = { version = "1.32.0", features = ["rt", "macros"]}
