[package]
name = "fut_tracing_2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
helpers = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, default-features = true, features = ["fmt", "json", "env-filter"] }
