[package]
name = "interop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
helpers = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, default-features = false, features = ["fmt", "json", "env-filter"] }
